2004-02-13  Hynek Hanke  <hanke@eda>

	* src/modules/module_utils_audio.c (module_audio_output_child): Temporarily set volume only as
	(ssip_volume-100)/2 for not damaging the sound with overflows.

2004-02-10  Hynek Hanke  <hanke@eda>

	* src/server/parse.c (parse_set): SET * VOLUME added to SSIP.

	* src/server/output.c (output_send_settings): Send the volume parameter to output module.

	* src/server/msg.h: Volume setting messages addded.

	* src/modules/module_utils.c (do_set): Read the volume settings

	* src/server/set.c (set_volume_uid): New function.

	* src/server/set.h: Volume setting functions.

	* intl/fdset.h (TFDSetElement): Volume added.
	(SPDMsgSettings): Volume added.

	* src/audio/spd_audio.c (spd_audio_play_wave): Multiply the samples array by the
	desired relative volume.

	* src/modules/festival.c (festival_set_volume): New function.

	* src/modules/module_utils_audio.c (module_audio_output_child): Handle new parameter: volume.
	(module_audio_output_child): Call spd_audio_set_volume().

2004-01-27  Milan Zamazal  <pdm@brailcom.org>

	* src/server/alloc.c (spd_realloc): New function.
	* src/server/alloc.h: Declare it.
	* src/server/server.c (serve): Socket reading code rewritten and
	hopefully finally fixed.

2004-01-20  Milan Zamazal  <pdm@brailcom.org>

	* src/server/server.c (serve): Reading data from socket fixed.

2003-12-21  Hynek Hanke  <hanke@volny.cz>

	* config/modules/festival.conf: Updated.
	New parameters (caching) added.

	* TODO: Updated.

	* version.sh (VERSION): Updated to version 0.2

	* src/tests/README: Updated to reflect the new '^' command, missing
	commands added also.

	* src/modules/festival.c (cache_destroy_entry): New function.
	(cache_destroy_table_entry): New function.
	(cache_free_counter_entry): New function.
	(cache_init): Init cache_counter.
	(cache_destroy): Destroy cache_counter.
	(cache_reset): Do nothing.
	(cache_counter_comp): New function.
	(cache_debug_foreach_list_score): New function.