@@ -57,6 +57,20 @@ AC_SUBST(moduleconfdir)
 
 AC_ARG_VAR(pidpath, Absolute path to a pid file)
 
+LIB_SDAUDIO_CURRENT=1
+LIB_SDAUDIO_REVISION=0
+LIB_SDAUDIO_AGE=0
+AC_SUBST(LIB_SDAUDIO_CURRENT)
+AC_SUBST(LIB_SDAUDIO_REVISION)
+AC_SUBST(LIB_SDAUDIO_AGE)
+
+LIB_SPD_CURRENT=0
+LIB_SPD_REVISION=1
+LIB_SPD_AGE=1
+AC_SUBST(LIB_SPD_CURRENT)
+AC_SUBST(LIB_SPD_REVISION)
+AC_SUBST(LIB_SPD_AGE)
+
 dnl Checks for header files.
 AC_HEADER_STDC
 AC_CHECK_HEADERS(limits.h sys/ioctl.h sys/time.h unistd.h)
