@@ -6,5 +6,5 @@ AM_CFLAGS = -DLOCALEDIR=\"$(localedir)\" -I/usr/include/ $(inc_local) @glib_incl
 
 lib_LTLIBRARIES = libspeechd.la
 libspeechd_la_SOURCES= libspeechd.c libspeechd.h
-
+libspeechd_la_LDFLAGS = -version-info @LIB_SPD_CURRENT@:@LIB_SPD_REVISION@:@LIB_SPD_AGE@
 
